--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,15 @@ center {
     padding-top: 4px;
 }
 
+#socicons > a > img {
+    width: 25px;
+    height: 25px;
+}
+
 #footer {
     font-family: Ubuntu Condensed;
-    padding: 0 7px 0 7px;
+    border-top: 1px dashed black;
+    padding: 7px 3px 5px 3px;
     font-size: 12px;
     background: white;
     width: 75%;
