--- a/styles.css
+++ b/styles.css
@@ -5,72 +5,20 @@ body {
     font-family: Ubuntu;
 }
 
-center {
-    height: 100%;
-}
-
-#face {
-    margin: 0px;
-    padding-top: 4px;
-}
-
-#socicons > a > img {
-    height: 25px;
-    margin-left: 3px;
-    margin-right: 3px;
-}
-
-#footer {
-    font-family: Ubuntu Condensed;
-    border-top: 1px dashed #FF6600;
-    padding: 7px 3px 5px 3px;
-    font-size: 12px;
-    background: white;
-    width: 75%;
-    margin: 0 auto;
-}
-
-.navleft {
-    font-family: Ubuntu Condensed;
-    background: #b0b0b0;
+.nav {
     color: white;
-    border-right: 5px solid red;
-    padding-right: 3px;
-    padding-left: 3px;
-    width: 100px;
-    height: 33%;
-    text-align: right;
-    overflow: hidden;
-}
-.navleft:hover {
-    background: #CCCCCC;
-    color: black;
+    background: #FF6600;
+    padding: 10px;
+    display: inline-block;
 }
 
-.navright {
-    font-family: Ubuntu Condensed;
-    background: #b0b0b0;
-    color: white;
-    border-left: 5px solid red;
-    padding-right: 3px;
-    padding-left: 3px;
-    height: 33%;
-    width: 100px;
-    overflow: hidden;
-}
-.navright:hover {
-    background: #CCCCCC;
-    color: black;
-}
-
-.page {
+.nav:hover {
+    color: #FF6600;
     background: white;
-    border: 3px solid white;
-    border-radius: 50px 50px 0px 0px;
-    width: 75%;
-    padding-bottom: 600px;
 }
 
-ul {
-    list-style-position: inside;
+#main {
+    background: white;
+    width: 100%;
+    height 75%;
 }
