--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,105 @@
 body {
 	margin: 0px;
     height: 100%;
-    background: #FF6600;
+    background: #E95420;
     font-family: Ubuntu;
+    color: #5E2750;
 }
 
-.nav {
-    color: white;
-    background: #FF6600;
-    padding: 10px;
+center {
+    height: 100%;
+}
+
+#face {
+    margin: 0px;
+    padding: 3px;
+    height: 100px;
+    width: 10%;
+}
+
+#socicons > a > img {
+    height: 25px;
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+#footer {
+    font-family: Ubuntu Condensed;
+    border-top: 1px dashed #E95420;
+    padding: 7px 3px 5px 3px;
+    font-size: 12px;
+    background: white;
+    width: 100%;
+    margin: 0 auto;
+}
+
+#navt {
+    margin-top: 0;
+    width: auto;
+    height: auto;
+    background: #5E2750;
+    color: #E95420;
+}
+
+#navt > tbody {
+    width: 25%;
+}
+
+#navt > tbody > tr {
+    width: 25%;
+}
+
+#menuimg {
+    margin-bottom: 50%;
+    margin-left: 5px;
+}
+
+#menu {
+    position: fixed;
+    margin-left: -80%;
+    transition: margin 2.5s;
+}
+
+#menu:hover {
+    margin-left: 0%;
+    transition: margin 1s;
+}
+
+#menu > div {
     display: inline-block;
 }
 
-.nav:hover {
-    color: #FF6600;
+.page {
+    margin-top: 5px;
+    border-top: 1px dashed #FFFFFF;
     background: white;
+    border: 3px solid white;
+    width: 90%;
+    padding-bottom: 600px;
+    color: #5E2750;
 }
 
-#main {
-    background: white;
-    width: 100%;
-    height 75%;
+ul {
+    list-style-position: inside;
+}
+
+.nav{
+    font-family: Ubuntu Condensed;
+    margin: 0px !important;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 3px;
+    height: 33%;
+    text-align: center;
+    overflow: hidden;
+}
+.navi{
+    background: #5E2750;
+    color: #E95420;
+    padding: 10px;
+}
+.navi:hover {
+    background: #E95420;
+    color: #5E2750;
 }
