--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-	margin: 0px;
+    margin: 0px;
     height: 100%;
     background: #E95420;
     font-family: Ubuntu;
@@ -35,7 +35,7 @@ center {
 
 #navt {
     margin-top: 0;
-    width: auto;
+    width: 100px;
     height: auto;
     background: #5E2750;
     color: #E95420;
