--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ center {
 
 #menu {
     position: fixed;
-    margin-left: calc(100% - 55px);
+    margin-left: calc(-(100% - 55px));
     transition: margin 2.5s;
 }
 
