Changed width for nav
The width for the nav used to be spanning all the way across the page, but now it only is where the actual menu is. That value was calculated with the width of the table plus the width of the menu icon.

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ center {
     left: 0px;
     margin-left: -1079.7px;
     transition: margin 2.5s;
-    width: auto;
+    width: 1135px;
 }
 
 #menu:hover {
